--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ lightning_logs/version_0/checkpoints/epoch=138-step=1382500.ckpt
 lightning_logs/version_1/events.out.tfevents.1661405655.icvm2.6568.0
 lightning_logs/version_1/checkpoints/epoch=0-step=2500.ckpt
 lightning_logs/
+train_debug.sh
+utils.py
