--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,2 @@
-__pycache__/global_utils.cpython-310.pyc
-__pycache__/litdata.cpython-310.pyc
-__pycache__/litmodule.cpython-310.pyc
-__pycache__/model.cpython-310.pyc
-lightning_logs/version_0/events.out.tfevents.1661325262.icvm2.9750.0
-lightning_logs/version_0/hparams.yaml
-lightning_logs/version_0/checkpoints/epoch=9-step=100000.ckpt
-lightning_logs/version_1/events.out.tfevents.1661343735.icvm2.30435.0
-lightning_logs/version_1/hparams.yaml
-lightning_logs/version_1/checkpoints/epoch=1-step=20000.ckpt
-_model.py
-empty_file.ipynb
-global_utils.py
-timecheck.ipynb
-lightning_logs/version_1/checkpoints/epoch=2-step=30000.ckpt
-lightning_logs/version_0/events.out.tfevents.1661346359.icvm2.38536.0
-lightning_logs/version_0/checkpoints/epoch=138-step=1382500.ckpt
-lightning_logs/version_1/events.out.tfevents.1661405655.icvm2.6568.0
-lightning_logs/version_1/checkpoints/epoch=0-step=2500.ckpt
-lightning_logs/
-train_debug.sh
-utils.py
+__pycache__/
 .vscode/
